Revert "fix(search): jumping scroll, remove fixed"
This reverts commit 239048b2a794bf821adf471de146ce854a97a6d8.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,8 @@ body.scrollbar-is-visible::-webkit-scrollbar {
 }
 
 body.modal-is-open {
-  overflow-y: hidden;
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 body.scrollbar-is-visible.modal-is-open {
